@@ -3,16 +3,22 @@ package com.endstation.beveragemachine.service.core.usecase.ingredients;
 import com.endstation.beveragemachine.service.dataprovider.db.ingredients.IngredientsRepository;
 import com.endstation.beveragemachine.service.model.IngredientData;
 import com.endstation.beveragemachine.service.model.IngredientResponse;
+import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
-public record IngredientsService(IngredientsRepository ingredientsRepository,
-                                 IngredientMapper ingredientMapper) {
+@RequiredArgsConstructor
+public class IngredientsService {
+
+    private final IngredientMapper ingredientMapper;
+    private final IngredientsRepository ingredientsRepository;
+
     public ResponseEntity<IngredientResponse> createIngredient(IngredientData ingredientData) {
 
         if (ingredientsRepository.existsByName(ingredientData.getName())) {
@@ -27,10 +33,12 @@ public record IngredientsService(IngredientsRepository ingredientsRepository,
     }
     public ResponseEntity<List<IngredientData>> getIngredients() {
         return ResponseEntity.ok(ingredientsRepository.findAll().stream()
-                .map(ingredientMapper::map)
-                .toList());
+                .map(ingredientsEntity -> IngredientData.builder()
+                        .name(ingredientsEntity.getName())
+                        .liquidType(ingredientsEntity.getLiquidType())
+                        .build())
+                .collect(Collectors.toList()));
     }
-
     public ResponseEntity<IngredientData> getIngredient(Long ingredientId) {
         Optional<IngredientData> ingredientDataOptional = ingredientsRepository.findById(ingredientId)
                 .map(ingredientMapper::map);
@@ -39,7 +47,6 @@ public record IngredientsService(IngredientsRepository ingredientsRepository,
     }
 
     public ResponseEntity<Void> updateIngredient(Long ingredientId, IngredientData ingredientData) {
-
         if (ingredientsRepository.findById(ingredientId).isEmpty()) {
             return new ResponseEntity<>(HttpStatus.NOT_FOUND);
         }
